bugfix: force z-index on scroll to top style

--- a/src/App.css
+++ b/src/App.css
@@ -899,8 +899,8 @@ display: block;
 }
 
 .styles_scroll-to-top__2A70v {
-  box-shadow: 0 9px 25px 0 rgb(	228, 98, 107, 0.2);
-  z-index: 3;
+  box-shadow: 0 9px 25px 0 rgb(	228, 98, 107, 0.2) !important;
+  z-index: 3 !important;
 }
 
 
